...
    val id: HomeSectionId,
    val title: String,
    val items: List<HomeCardModel>,
)

enum class HomeSectionId(val displayTitle: String) {
    LIBRARIES("My Libraries"),
    CONTINUE_WATCHING("Continue Watching"),
    NEXT_EPISODES("Next Episodes"),
    RECENT_EPISODES("Recently Added TV Episodes"),
    RECENT_MOVIES("Recently Added Movies"),
    RECENT_MUSIC("Recently Added Music"),
    RECENT_COLLECTIONS("Recently Added Collections"),
}

sealed class HomeUiState {
    data object Loading : HomeUiState()
...
